--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -2681,6 +2681,7 @@ ev << dispstr.getString();  // result: "x=joe,,jim;a=1,2;p=beta,,3"
 
 
 \section{Deriving new classes}
+\label{sec:ch-sim-lib:deriving-new-classes}
 
 \subsection{cObject or not?}
 
