--- a/doc/src/manual/ChangeLog
+++ b/doc/src/manual/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-07  Andras Varga
+
+	* ch-messages.tex: hints to call take() and drop() when adding
+	more than one message objects to a message
+
 2003-08-21  Andras Varga
 
 	* Makefile: added usman.html target [thanks Johnny]
