--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-11  Andras Varga
+
+	* all files: follow changes in sim/; C-style casts replaced with 
+	static_cast<>
+
 2003-11-13  Andras Varga
 
 	* Checked in parallel simulation code that was developed March-May 2003,
