*** empty log message ***

--- a/test/tkenv/layout/README
+++ b/test/tkenv/layout/README
@@ -3,4 +3,8 @@ Tests auto-layouting capability in Tkenv.
 
 Currently problematic ones:
 - net60 oscillates around a stable solution
+- dyna for n>10 is total failure
 - networkLayers is total failure
+
+In general, when there're many anchored nodes, they cause the graph
+oscillate wildly...
