--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Andras Varga
+
+	* cenvir.cc, omnetapp.h: added isGUI()
+
 2004-01-01  Andras Varga
 
 	* omnetapp.cc/h, cenvir.cc: handle new cEnvir notifications: 
