--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-09  Andras Varga
+
+	* cenvir.h: added overloaded "<<" operator for printing object pointers
+	and references (cObject*, const cObject*, cObject&, const cObject&).
+	It prints the class name and the full name, like "(cMessage)hello".
+
 2004-01-06  Andras Varga
 
 	* cenvir.h: added isGUI()
