--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Andras Varga
+
+	* modinsp.cc/h/tcl,tkapp.cc/h: implemented bubble() -- submodules
+	can display a bubble with a short message like "Queue full!".
+
 2004-01-06  Andras Varga
 
         * virtual bool isGUI() {return false;}
