--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -7,6 +7,7 @@
 
 	* added anum speed slider in main dialog 
 TBD get that working!!!!!!
+FIXME: module name changes don't propagate to graphics!
 
 2004-01-06  Andras Varga
 
