--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -456,17 +456,9 @@ Makefiles are included.
 
 \begin{Verbatim}[commandchars=\\\{\}]
     \tbf{samples/}     directories for sample simulations
-      \tbf{nim/}       a simple two-player game
-      \tbf{hcube/}     hypercube network with deflection routing
-      \tbf{token/}     simple model of a Token Ring LAN
-      \tbf{fddi/}      an accurate FDDI MAC simulation
-      \tbf{hist/}      demo of the histogram classes
-      \tbf{dyna/}      model of a client-server network
-      \tbf{dyna2/}     a version of dyna, using message subclassing
-      \tbf{fifo1/}     single-server queue
-      \tbf{fifo2/}     another version of fifo, with handleMessage() and FSM
-      \tbf{topo/}      NED demo, shows how to create various topologies
-      \tbf{demo/}      several sim. models in a single executable
+      \tbf{aloha/}     models the Aloha protocol
+      \tbf{cqn/}       Closed Queueing Network
+      ...
 \end{Verbatim}
 
 
