--- a/doc/usman/ch-messages.tex
+++ b/doc/usman/ch-messages.tex
@@ -1476,8 +1476,8 @@ void setField(double d) = 0;
 
 \subsubsection{Example simulations}
 
-Several of the example simulations (Token Ring, Dyna2, Hypercube)
-use message definitions. For example, in Dyna2 you'll find this:
+Several of the example simulations (Token Ring, Dyna, Hypercube)
+use message definitions. For example, in Dyna you'll find this:
 
 \begin{itemize}
  \item \ttt{dynapacket.msg} defines \fname{DynaPacket} and \fname{DynaDataPacket};
