--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Andras Varga
+
+	* opp_msgc: fix: didn't handle files in other directories (wrong
+	#ifndef symbol was generated for the header file) [reported by
+	Andreas Koepke]
+
 2004-01-04  Andras Varga
 
 	* opp_msgc: updated for changed ownership management rules
