--- a/README
+++ b/README
@@ -9,9 +9,13 @@ library, multiple execution environments (both GUI and command line),
 a result plotting tool, good documentation, many sample simulations and
 much more... And it is open source!
 
-Please look into the doc/ subdirectory where you'll find README files,
-installation instructions, license, the manual in PDF, etc. The html/
-subdirectory contains the HTML version of the manual.
+The doc/ subdirectory contains platform-specific README files with installation
+instructions, the license text, the manual (PDF,HTML) and the class library
+reference.
+
+After successful installation, if you are new to OMNeT++, the example 
+simulations are a good place to begin -- go to the samples/ directory and 
+start rundemo.
 
 Enjoy!
 
