--- a/doc/src/manual/title.tex
+++ b/doc/src/manual/title.tex
@@ -16,7 +16,7 @@
 \vspace{1.5em}
 {\LARGE Discrete Event Simulation System}\\
 \vspace{1em}
-{\large Version 2.3}\\
+{\large Version 3.0 preview 1}\\
 \vspace{1em}
 \tbf{\textit{{\LARGE User Manual}}}
 \end{center}
@@ -27,7 +27,7 @@
 by {\large Andr\'{a}s Varga}
 \vspace{3em}
 
-\textit{Last updated: June 15, 2003}
+\textit{Last updated: Jan 30, 2004}
 
 
 
