--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,7 +1,11 @@
 Remaining issue: gate directions not observed in Conn Props dialog.
-FIXME!!! when submodule has random placement, strange thing happens 
-after OK'ing Props dialog
+FIXME!!! when submodule has random placement, strange thing happens after OK'ing Props dialog
 GNED not compatible with new Tkenv mode of using "i=" and "b=" together
+new Tkenv display string tags not supported yet
+
+2004-02-03  Andras Varga
+
+	* nedfile.cc fixes
 
 2003-11-29  Andras Varga
 
