--- a/samples/dyna/ChangeLog
+++ b/samples/dyna/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2004-02-01  Andras Varga
 
 	* display strings moved from omnetpp.ini to NED files (opp_neddoc 
