--- a/doc/usman/ChangeLog
+++ b/doc/usman/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2004-01-20  Andras Varga
 
 	* ch-simple-modules.tex: clarified dynamic modules and finish()
