--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2003-11-04  Andras Varga
 
 	* ned and msg files: comments reformatted to make them opp_neddoc friendly.
