--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2004-01-22  Andras Varga
 
 	* opp_msgc: fix: didn't handle files in other directories (wrong
