--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 FIXME: comment parsing broken (leaves out comments from index.ned!!!)
 
 2003-10-19  Andras Varga
