--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2003-11-13  Andras Varga
 
 	* checked in parallel simulation code that was developed March-May 2003,
