--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-02-04  ------ omnetpp-3.0pre1 released ------
+
 2004-02-03  Andras Varga
 
 	* neddoc.xsl: module etc names in generated .dot files need quotes 
