--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -4,6 +4,8 @@ Remaining issue: gate directions not observed in Conn Props dialog.
 FIXME!!! when submodule has random placement, strange thing happens after OK'ing Props dialog
 GNED not compatible with new Tkenv mode of using "i=" and "b=" together
 new Tkenv display string tags not supported yet
+internally, images must be named with "img:" prefix! (otherwise exit.gif, 
+proc.gif etc will overwrite the exit, proc Tcl commands!)
 
 2004-02-03  Andras Varga
 
