--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-06  Andras Varga
+
+	* cgate.cc: implemented cGate::disconnect(); revised cGate::connectTo()
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2004-01-09  Andras Varga
