--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-06  Andras Varga
+
+	* cgate.h: added cGate::disconnect(); revised cGate::connectTo()
+
+	* cchannel.h: added setDelay(double), setError(double), 
+	setDatarate(double) to cSimpleChannel
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 TBD break up ctypes.cc?
