--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-07  Andras Varga
+
+	* cstructinsp.cc: fix: prepare for missing descriptor object
+	[bug reported by Kurtis Kredo]
+	
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2004-01-20  Andras Varga
